...
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentUnlock">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:orientation="vertical">

...
            android:layout_marginTop="70dp"
            android:padding="20dp"
            android:adjustViewBounds="false"/>
        <!-- app:srcCompat="@drawable/ic_nfc" -->

        <Button
            android:id="@+id/button_unlock"
            android:layout_width="200dp"
            android:layout_marginTop="90dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
...
