<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_unlock"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/dialogButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="Close"
        android:textColor="@color/colorPrimary" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>